--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-19  buliabyak@users.sf.net
+
+	* ja.po update from shivaken
+
 2004-02-20  buliabyak@users.sf.net
 
 	* es.po update from Lucas Vieites
