--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-03-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/widgets/sp-widget.h, src/widgets/sp-widget.cpp
+	(sp_widget_new_repr): Remove this unused function.
+
 	* src/libnrtype/nr-rasterfont.cpp (nr_rasterfont_ensure_glyph_slot):
 	Address compiler warning.
 
