--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-24  Ted Gould <ted@gould.cx>
+
+	* Minor changes to get distcheck to work.
+
 2004-03-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/draw-context.h, src/draw-context.cpp: Cleanup: greater
