--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-25  Alexander Clausen <alex@skip86.com>
+	
+	* src/inkview.cpp Fix inkview crash on startup
+
 2004-03-24  Ted Gould <ted@gould.cx>
 
 	* Minor changes to get distcheck to work.
