fred (long overdue), adib
(bzr r2024)

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,11 +7,13 @@ Bulia Byak
 Chema Celorio
 Johan Ceuppens
 Zbigniew Chyla
+John Cliff
 Kees Cook
 Robert Crosbie
 Jon Cruz
 Danilo Egan
 Frank Felfe
+Fred
 Ted Gould
 Bryce Harrington
 Nathan Hurst
@@ -33,5 +35,6 @@ Mitsuru Oka
 Jon Phillips
 Christian Schaller
 Tom von Schwerdtner
+Adib Taraben
 Daniel Yacob
 Masatake Yamato
