--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,18 +1,22 @@
+2004-03-27  buliabyak@users.sf.net
+
+	* hu.po: update from Arpad Biro
+
 2004-03-19  buliabyak@users.sf.net
 
-	* ja.po update from shivaken
+	* ja.po: update from shivaken
 
 2004-02-20  buliabyak@users.sf.net
 
-	* es.po update from Lucas Vieites
+	* es.po: update from Lucas Vieites
 
 2004-02-14  buliabyak@users.sf.net
 
-	* ru.po update from Alex Remizov
+	* ru.po: update from Alex Remizov
 
 2004-02-11  buliabyak@users.sf.net
 
-	* fr.po update from f.rodrigo@tuxfamily.org
+	* fr.po: update from f.rodrigo@tuxfamily.org
 
 2003-12-21  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
