--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-28  MenTaLguY <mental@rydia.net>
+
+	* src/sp-gradient.cpp: request SP_OBJECT_MODIFIED_FLAG if gradient stops
+	  are added or removed
+
 2004-03-27  bulia byak <bulia@users.sourceforge.net>
 
 	* src/main.cpp: Removed redundancy in error messages, reworded some
