--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-28  Jon Phillips <jon@users.sourceforge.net>
+
+	* src/interface.cpp src/select-toolbar.cpp src/verbs.cpp src/verbs.h: 
+      Changed rotate verb to be SP_VERB_OBJECT_ROTATE_90_CW so that I can 
+      now install SP_VERB_OBJECT_ROTATE_90_CCW.
+
+
 2004-03-28  MenTaLguY <mental@rydia.net>
 
 	* src/sp-gradient.cpp: request SP_OBJECT_MODIFIED_FLAG if gradient stops
