Move mod360 to new files mod360.cpp, mod360.h.  Add unit test for it.
(bzr r2044)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,22 +1,28 @@
+2004-03-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/dyna-draw-context.cpp, src/mod360.cpp, src/mod360.h,
+	src/Makefile.am: Move mod360 to new files mod360.cpp, mod360.h.
+	Add unit test for it.
+
 2004-03-28  Bryce Harrington <bryce@bryceharrington.com>
 
 	* inkscape.cpp, inkscape.h, xml/repr-io.cpp, xml/repr.h:  Adding
 	  better error handling for the situation where the
 	  preferences.xml file is not successfully loaded.  In this case,
 	  we want to suppress saving it, lest we overwrite the file with
-	  the default skeleton preferences.	
+	  the default skeleton preferences.
 
 2004-03-28  Jon Phillips <jon@users.sourceforge.net>
 
-    * src/interface.cpp src/select-toolbar.cpp src/verbs.cpp src/verbs.h: 
-      Changed rotate verb to be SP_VERB_OBJECT_ROTATE_90_CW so that I can 
-      now install SP_VERB_OBJECT_ROTATE_90_CCW.
+	* src/interface.cpp src/select-toolbar.cpp src/verbs.cpp src/verbs.h:
+	  Changed rotate verb to be SP_VERB_OBJECT_ROTATE_90_CW so that I can
+	  now install SP_VERB_OBJECT_ROTATE_90_CCW.
 
-    * share/icons/icons.svg src/interface.cpp src/select-toolbar.cpp        
-      src/selection-chemistry.cpp src/selection-chemistry.h 
-      src/verbs.cpp src/verbs.h: Added rotation 90 degrees CCW to the menu, 
-      icons, and the interface. It was a pretty simple thing to do but was 
-      not available on the interface.
+	* share/icons/icons.svg src/interface.cpp src/select-toolbar.cpp
+	  src/selection-chemistry.cpp src/selection-chemistry.h
+	  src/verbs.cpp src/verbs.h: Added rotation 90 degrees CCW to the menu,
+	  icons, and the interface. It was a pretty simple thing to do but was
+	  not available on the interface.
 
 2004-03-28  MenTaLguY <mental@rydia.net>
 
