--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-04-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/helper/bezier-utils.cpp (NewtonRaphsonRootFind): Ensure that the
+	"improved" value is never worse than the previous guess.
+
 	* src/helper/bezier-utils.cpp:
 	Greater CodingStyle conformance, mainly whitespace changes.
 
