--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-04  buliabyak@users.sf.net
+
+	* hu.po: another update from Arpad Biro
+
 2004-03-27  buliabyak@users.sf.net
 
 	* hu.po: update from Arpad Biro
