--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2004-0405 njh <njh@mail.csse.monash.edu.au>
+2004-04-05  njh <njh@mail.csse.monash.edu.au>
 
 	* debian/rules,debian/control: applied patch from Kees Cook to remove
 	obsolete libraries, and to tidy things up a tad.
